# BCNP

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  LICENSE  README.md  README_8md.html  adapter_8h.html  adapter_8h.js  adapter_8h__dep__incl.map  adapter_8h__dep__incl.md5  adapter_8h__incl.map  adapter_8h__incl.md5  adapter_8h_source.html  annotated.html  annotated_dup.js  bcnp__codegen_8py.html  bcnp__codegen_8py.js  bcnp__codegen_8py_source.html  classbcnp_1_1ByteStream-members.html  classbcnp_1_1ByteStream.html  classbcnp_1_1ByteStream.js  classbcnp_1_1ByteStream__inherit__graph.map  classbcnp_1_1ByteStream__inherit__graph.md5  classbcnp_1_1ByteStream_a4ad7e4b491d1bea487fee2200257bb80_icgraph.map  classbcnp_1_1ByteStream_a4ad7e4b491d1bea487fee2200257bb80_icgraph.md5  classbcnp_1_1ByteWriter-members.html  classbcnp_1_1ByteWriter.html  classbcnp_1_1ByteWriter.js  classbcnp_1_1ByteWriter__inherit__graph.map  classbcnp_1_1ByteWriter__inherit__graph.md5  classbcnp_1_1ByteWriter_a09808d8de18a12712701dbe4d1d0a4c4_icgraph.map  classbcnp_1_1ByteWriter_a09808d8de18a12712701dbe4d1d0a4c4_icgraph.md5  classbcnp_1_1CommandQueue-members.html  classbcnp_1_1CommandQueue.html  classbcnp_1_1CommandQueue.js  classbcnp_1_1CommandQueue__coll__graph.map  classbcnp_1_1CommandQueue__coll__graph.md5  classbcnp_1_1CommandQueue_a363f1cf94907708289b39f67c3696f8c_cgraph.map  (+545 more)
.github/workflows/: gh-pages.yml
examples/: bcnp_messages.py  core_demo.cpp  simple_client.py
java/: build.gradle  settings.gradle
java/src/main/cpp/: bcnp_jni.cpp
java/src/main/java/com/bcnp/: BcnpJNI.java  BcnpResult.java  BcnpSlice.java  PacketView.java  StreamParser.java  TcpAdapter.java
java/src/test/java/com/bcnp/: BcnpCoreTest.java
schema/: README.md  bcnp_codegen.py  bcnp_schema.json  messages.json  schema.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  (+78 more)
src/bcnp/: command_queue.cpp  command_queue.h  controller.cpp  controller.h  dispatcher.cpp  dispatcher.h  message_queue.h  packet.cpp  packet.h  packet_storage.h  spi_adapter.cpp  spi_adapter.h  static_vector.h  stream_parser.cpp  stream_parser.h  telemetry_accumulator.h
src/bcnp/transport/: adapter.h  controller_driver.cpp  controller_driver.h  tcp_posix.cpp  tcp_posix.h  udp_posix.cpp  udp_posix.h
tests/: bcnp_tests.cpp  bcnp_tests_1.cpp  bcnp_tests_2.cpp  test_schema.json
